feat: use new esri guidelines for adding map

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,1 +1,6 @@
-<div #view class="w-full h-full"></div>
+<!-- <div #view class="w-full h-full"></div> -->
+<arcgis-map #view center="-4, 57" scale="100000">
+  <arcgis-scale-bar position="bottom-left" unit="dual"></arcgis-scale-bar>
+  <arcgis-zoom position="top-left"></arcgis-zoom>
+  <arcgis-compass position="top-left"></arcgis-compass>
+</arcgis-map>
