feat: add location capability

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -3,4 +3,5 @@
   <arcgis-scale-bar position="bottom-left" unit="dual"></arcgis-scale-bar>
   <arcgis-zoom position="top-left"></arcgis-zoom>
   <arcgis-compass position="top-left"></arcgis-compass>
+  <arcgis-locate position="top-right" scale="5000"></arcgis-locate>
 </arcgis-map>
