--- a/src/app/components/drawer-content/drawer-content.component.html
+++ b/src/app/components/drawer-content/drawer-content.component.html
@@ -1,7 +1,6 @@
 <div class="flex m-2">
-  <p class="text-lg font-bold text-bgs-primary-earth">Settings:</p>
+  <p class="text-lg font-bold text-primary-earth">Settings:</p>
 </div>
 <div class="flex justify-center m-2">
 
 </div>
-
